プロダクションコードの実装

--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,11 @@
 
     "config": {
         "bin-dir": "bin/"
+    },
+
+    "autoload": {
+        "psr-0": {
+            "Behat\\Porker": "src/"
+        }
     }
 }
